--- a/website/calc/static/style.css
+++ b/website/calc/static/style.css
@@ -107,6 +107,7 @@ nav{
     display: flex;
     justify-content: space-around;
     padding: 13px 5%;
+    align-items: center;
 }
 
 .left-sidebar{
@@ -131,6 +132,7 @@ nav{
 
 .main-content{
     flex-basis: 47%;
+    align-items: center;
 }
 
 .imp-links a{
@@ -201,6 +203,7 @@ nav{
     padding: 20px;
     color: #31364C;
     margin: 20px 20px;
+    align-items: center;
 
 }
 
@@ -351,6 +354,7 @@ nav{
     border-radius: 5px;
     padding: 5px;
     display: none;
+    align-items: center;
 }
 
 .box-container .box{
@@ -361,6 +365,7 @@ nav{
     background: #f8f8f8;
     overflow-y: auto;
     text-align: left;
+    align-items: center;
 }
 
 #input{
@@ -374,6 +379,24 @@ nav{
 
 #input:focus{
     border-bottom: 2px solid #fff;
+}
+
+#button1[type="submit"]{
+    width: 100%;
+    height: 50px;
+    border: 1px solid;
+    background: #cc2a36;
+    border-radius: 25px;
+    font-size: 18px;
+    color: #e9f4fb;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+}
+
+#button1:hover{
+    border-color: #cc2a36;
+    transition: .5s;
 }
 
 /* media query for homepage */
