--- a/website/calc/templates/add.html
+++ b/website/calc/templates/add.html
@@ -97,11 +97,10 @@
       <form action="add" method="post">
           {% csrf_token %}
           <h3><label>Username :</label>
-          <input type="text" name="uname" placeholder="Enter your Username" required><br>
-          <h3>Enter your Question here :</h3>
+          <input type="text" name="uname" placeholder="Enter your Username" required><br><br>
+          <h3>Enter your Question here :</h3><br>
           <textarea name="question" class="question" cols="60" rows="30" placeholder="Start your with What Where How Etc" required></textarea><br><br>
           <button type="submit" class="button1" value="Submit">Post</button>
-          <button type="submit" class="button1" value="Submit">Back</button>
       </form>
   </div>
 
