--- a/website/calc/templates/feed.html
+++ b/website/calc/templates/feed.html
@@ -93,7 +93,7 @@
 <!-- navbar -->
 
 <!-- content -->
-    <div class="container">
+<!-- <div class="container"> -->
 
 <!-- left-side  -->
 <!--       
@@ -114,61 +114,52 @@
       </div> -->
 
 <!-- main-content  -->
+
 {% for x,y in result %}
-  
-      <div class="main-content">
-        <div class="post-container">
-          <div class="user-profile">
-            <h3><i class="bi bi-person-circle"></i></h3>
+<div class="main-content">
+  <div class="post-container">
+    <div class="user-profile">
+      <h3><i class="bi bi-person-circle"></i></h3>
 
-            <div>
-              <p>{{x}}</p>     <!--Username-->
-              <!-- <span>The date when the question was posted</span> -->
-            </div>
-          </div>
+      <div>
+        <p>{{x}}</p>     <!--Username-->
+      </div>
+    </div>
 
-          <p class="post-text" id="question">{{y}}</p>     <!--Question-->
-          <div class="post-row">
-            <div class="activity-icons">
-              <button id="likebtn" onclick="likebtn();">
-                <i class="far fa-thumbs-up icon_like"></i><p id="votes">0</p>
-              </button>
+    <p class="post-text" id="question">{{y}}</p>     <!--Question-->
+    <div class="post-row">
+      <div class="activity-icons">
+        <button id="likebtn" onclick="likebtn();">
+          <i class="far fa-thumbs-up icon_like"></i><p id="votes">0</p>
+        </button>
 
-              <button id="dislikebtn" onclick="dislikebtn();">
-                <i class="far fa-thumbs-down icon_dislike"></i><p id="votes_1">0</p>
-              </button>
-              <div class="comment-box">
-                <form action="comment" method="post">
-                  {% csrf_token %}
-                  <input type="text" name="answer" id="input" placeholder="Leave a comment" />
-                  
-  
-                  {% for i,j in answer %}
-                    <h4>{{i}}</h4>
-                    <h4>{{j}}</h4>
-                  {% endfor %}
-                  <button type="submit" name="button" value="submit" id="comment" onclick="comment_fun()">
-                    <i class="bi bi-arrow-right-circle"></i>
-                  </button>
-                </form>
-                  <button type="button" name="button" id="cancel">
-                    <i class="bi bi-x-circle"></i>
-                  </button>
-                
-                <!-- <div class="box-container">
-                    <div class="box">
-                    <button type="button" name="button" id="delete">
-                      <i class="bi bi-trash3"></i>
-                    </button>
-                  </div> 
-                </div> -->
-              </div>
-            <!-- </div> -->
-          </div> 
+        <button id="dislikebtn" onclick="dislikebtn();">
+          <i class="far fa-thumbs-down icon_dislike"></i><p id="votes_1">0</p>
+        </button>
+        <div class="comment-box">
+          <form action="comment" method="post">
+            {% csrf_token %}
+            <input type="text" name="answer" id="input" placeholder="Leave a comment" />
+            
+
+            {% for i,j in answer %}
+              <h4><i class="bi bi-person-circle"></i>{{i}}</h4>
+              <h4>{{j}}</h4><br>
+            {% endfor %}
+            <button type="submit" name="button" value="submit" id="comment" onclick="comment_fun()">
+              <i class="bi bi-arrow-right-circle"></i>
+            </button>
+          </form>
+            <button type="button" name="button" id="cancel">
+              <i class="bi bi-x-circle"></i>
+            </button>
         </div>
       </div>
- 
+    <!-- </div>  -->
+  </div>
+</div>
 {% endfor %}
+
 <!-- right-side -->
 <!-- 
       <div class="right-sidebar">
