--- a/website/calc/static/style.css
+++ b/website/calc/static/style.css
@@ -155,6 +155,7 @@ nav{
 
 .imp-links{
     border-bottom: 1px solid #ccc;
+    margin-left: -90px;
 }
 
 .side-bar-title{
@@ -203,8 +204,8 @@ nav{
     padding: 20px;
     color: #31364C;
     margin: 20px 20px;
-    align-items: center;
-
+    justify-content: left;
+    margin-left: -140px;
 }
 
 .user-profile{
@@ -342,7 +343,7 @@ nav{
 
 .comment-box{
        width: 250px;
-       text-align: right;
+       text-align: left;
        display: inline-flex;
 }
 
@@ -399,8 +400,32 @@ nav{
     transition: .5s;
 }
 
+.comments{
+    justify-content: left;
+    margin-left: -70px;
+
+}
+
+.button1{
+    width: 20%;
+    height: 50px;
+    border: 1px solid;
+    background: #cc2a36;
+    border-radius: 25px;
+    font-size: 18px;
+    color: #e9f4fb;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+}
+
+.button1:hover{
+    border-color: #cc2a36;
+    transition: .5s;
+}
+
 /* media query for homepage */
-/* @media(max-width: 900px){
+@media(max-width: 900px){
     .right-sidebar{
         display: none;
     }
@@ -430,4 +455,4 @@ nav{
     .main-content{
         flex-basis: 100%;
     }
-} */
+}
