--- a/website/calc/templates/feed.html
+++ b/website/calc/templates/feed.html
@@ -92,11 +92,10 @@
     </nav>
 <!-- navbar -->
 
-<!-- content -->
-<!-- <div class="container"> -->
+<!--content -->
+<div class="container">
 
-<!-- left-side  -->
-<!--       
+<!-- left-side  -->      
       <div class="left-sidebar">
         <div class="imp-links">
           <a href="#"><i class="bi bi-pc-display"></i>Computer Science</a>
@@ -111,7 +110,7 @@
 
           <a href="#">See More</a>
         </div>
-      </div> -->
+      </div>
 
 <!-- main-content  -->
 
@@ -140,19 +139,20 @@
           <form action="comment" method="post">
             {% csrf_token %}
             <input type="text" name="answer" id="input" placeholder="Leave a comment" />
+            <button type="submit" name="button" value="submit" id="comment" onclick="comment_fun()">
+              <i class="bi bi-arrow-right-circle"></i>
+            </button>
             
-
+            <div class="comments">
             {% for i,j in answer %}
               <h4><i class="bi bi-person-circle"></i>{{i}}</h4>
               <h4>{{j}}</h4><br>
             {% endfor %}
-            <button type="submit" name="button" value="submit" id="comment" onclick="comment_fun()">
-              <i class="bi bi-arrow-right-circle"></i>
-            </button>
+            </div>
           </form>
-            <button type="button" name="button" id="cancel">
+            <!-- <button type="button" name="button" id="cancel">
               <i class="bi bi-x-circle"></i>
-            </button>
+            </button> -->
         </div>
       </div>
     <!-- </div>  -->
